# s2t

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REVIEW_PLAN.md  install.sh  refactor_loop.sh  setup.sh  transcibtion.json  voice-dictation.desktop
.claude/: settings.json
.github/workflows/: ci.yml
docs/: REFACTORING-PLAN.md  STATUS.md  architecture-fitness-methodology.md  warnings-analysis.md
docs/adr/: 001-global-hotkey-approach.md  002-config-format.md  003-loopback-recording-approach.md  004-speaker-diarization-approach.md  005-stt-alternatives-optimization.md  006-native-pipewire-api.md  007-chunked-audio-processing.md  TEMPLATE.md
docs/architecture/: overview.md  pipeline-analysis.md
docs/audit/: AUDIT-SUMMARY.md  FINDINGS.md  RECOMMENDATIONS.md  REMEDIATION-PLAN.md  architecture-overview-and-design-findings.md  findings-export.json  refactoring-complete.md
docs/audit/refactoring-sessions/: 001-p0-deadlock-and-panic.md  002-p0-stream-errors-and-buffer-clone.md  003-p0-sha256-model-verification.md  004-p1-parking-lot-mutex-migration.md  005-p1-lock-free-audio-buffer.md  006-p1-drop-implementations.md  007-p1-thread-sleep-gtk-main-thread.md  008-p1-signal-handlers-clean-shutdown.md  009-p1-silent-error-swallowing.md  010-p1-lock-ordering.md  011-p1-segmentation-thread-join.md  012-p1-polling-timeout-and-denoiser-caching.md  013-p2-extract-download-file.md  014-p2-decompose-settings-dialog.md  015-p2-testability-constructors.md  016-p2-ringbuffer-segmentation-tests.md  017-p2-integration-tests.md  018-p2-extract-ui-patterns.md  019-p2-input-validation-file-permissions.md
docs/backlog/: TEMPLATE.md  auto-copy.md  conference-recording.md  global-hotkeys.md  settings-dialog.md
docs/research/: coqui-stt-test.md  kyutai-stt-research.md  loopback-recording-test.md  multi-language-handling-research.md  parakeet-rs-models-research.md  speaker-diarization-test.md  stt-optimization-test.md  ukrainian-stt-models-research.md  vad-enhancement-research.md
scripts/: compare_stt.sh
src/: audio.rs  conference_recorder.rs  config.rs  context.rs  continuous.rs  denoise.rs  diarization.rs  history.rs  history_dialog.rs  hotkeys.rs  lib.rs  loopback.rs  main.rs  model_dialog.rs  models.rs  paste.rs  recordings.rs  ring_buffer.rs  settings_dialog.rs  traits.rs  tray.rs  types.rs  ui.rs  vad.rs  whisper.rs
src/app/: channels.rs  config.rs  context.rs  mod.rs
src/cli/: args.rs  denoise_eval.rs  mod.rs  transcribe.rs  wav_reader.rs
src/dialogs/: history.rs  mod.rs  model.rs  settings.rs
src/dialogs/history/: export.rs  list.rs  mod.rs
src/dialogs/model/: download.rs  list.rs  mod.rs
src/domain/: traits.rs  types.rs
src/history/: entry.rs  export.rs  mod.rs  persistence.rs
src/infrastructure/: hotkeys.rs  mod.rs  models.rs  paste.rs  recordings.rs  tray.rs
src/recording/: conference.rs  continuous.rs  core.rs  denoise.rs  loopback.rs  microphone.rs  mod.rs  ring_buffer.rs  segmentation.rs  service.rs  split.rs
src/services/: audio.rs  mod.rs  transcription.rs
src/stt/: mod.rs  tdt.rs
src/test_support/: mocks.rs  mod.rs
src/transcription/: chunker.rs  diarization.rs  mod.rs  service.rs  tdt.rs  whisper.rs
src/ui/: conference.rs  conference_file.rs  continuous.rs  dispatch.rs  mic.rs  mod.rs  recording.rs  shared.rs  state.rs  widgets.rs
src/vad/: mod.rs  silero.rs  webrtc.rs
stt_comparison_results/: conference_2026-01-29_15-59-29_tdt.json  conference_2026-01-29_15-59-29_tdt_denoise.json  conference_2026-01-29_15-59-29_whisper_base_channel_denoise.json  conference_2026-01-29_15-59-29_whisper_base_none.json  conference_2026-01-29_15-59-29_whisper_base_sortformer_denoise.json  conference_2026-01-29_15-59-29_whisper_medium_channel.json  conference_2026-01-29_15-59-29_whisper_medium_none_denoise.json  conference_2026-01-29_15-59-29_whisper_medium_sortformer_denoise.json  conference_2026-01-29_15-59-29_whisper_small-q8_0_channel.json  conference_2026-01-29_15-59-29_whisper_small-q8_0_none_denoise.json  conference_2026-01-29_15-59-29_whisper_small-q8_0_sortformer.json  log.txt  summary.md
tests/: cli_transcribe.rs  config_roundtrip.rs  history_roundtrip.rs
