[package]
name = "voice-dictation"
version = "0.3.0"
edition = "2021"
description = "System tray voice dictation app using Whisper for offline speech-to-text on Linux"
license = "MIT"
keywords = ["voice", "dictation", "whisper", "speech-to-text", "gtk"]
categories = ["multimedia::audio"]

[dependencies]
# GUI
gtk4 = "0.9"
glib = "0.20"
gio = "0.20"

# System tray (StatusNotifierItem for modern Linux)
ksni = "0.3"

# Audio recording
cpal = "0.15"
rubato = "0.16"

# Whisper speech recognition
whisper-rs = "0.12"

# Utilities
anyhow = "1.0"
dirs = "5.0"
async-channel = "2.3"

# Config & serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Global hotkeys
global-hotkey = "0.5"

# Keyboard simulation for auto-paste
# Note: Uses xdotool command-line tool (install with: sudo dnf install xdotool)

# PipeWire for loopback recording
pipewire = "0.9"

# Audio file encoding (WAV format)
hound = "3.5"

# Voice Activity Detection for continuous mode
webrtc-vad = "0.4"

# Silero VAD (neural network-based, more accurate)
voice_activity_detector = "0.2.1"

# Noise suppression (RNNoise-based)
nnnoiseless = "0.5"

# Cryptographic hashing for model integrity verification
sha2 = "0.10"

# Mutex without poisoning (parking_lot::Mutex)
parking_lot = "0.12"

# Speaker diarization (Sortformer) and TDT backend (parakeet-rs)
[dependencies.parakeet-rs]
version = "0.2"
features = ["sortformer"]

[profile.release]
opt-level = 3
lto = true
